# beer_robot

./: .gitignore  README.md  requirements.txt
docs/: README.md  index.html  journey.html  notes.html  style.css
src/ESP32/motor_controller/: motor_controller.ino
src/beer_robot_ros2/: README.md  package.xml  setup.cfg  setup.py
src/beer_robot_ros2/beer_robot_ros2/: camera_node.py  config.py  debug.py  debug_saver_node.py  detector_node.py  esp32_bridge_node.py  image_utils.py  ncnn_detector.py  target_manager.py  target_manager_node.py  tracker.py  tracker_node.py  types.py
src/beer_robot_ros2/launch/: beer_robot_pipeline.launch.py
src/best_ncnn_model/: metadata.yaml  model.ncnn.param  model_ncnn.py
