<?xml version="1.0"?>
<package format="3">
  <name>beer_robot_ros2</name>
  <version>0.1.0</version>
  <description>ROS2 split of robot_logic_ncnn_optimized.py without changing core logic</description>
  <maintainer email="sam@example.com">sam</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
